@@ -1,4 +1,6 @@
 v0.11
+	* ADD : support for OSM links in download dialog (Refs #812) (by Timo Schlüßler)
+	* ADD : shortcuts for zoom-in(+) and zoom-out(-) (by Timo Schlüßler)
 	* FIX : keyboard modifiers: ctrl-click toggle; shift-click add; ctrl-add-click prevents road selection; shift-drag selects features which intersects
 	* ADD : Information dock
 	* ADD : Dock menu / shortcuts
